loads of stuff plus innerclasses